kubernetes-microservices/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: microservice-app
  labels:
    app: microservice

spec:
  replicas: 3

  selector:
    matchLabels:
      app: microservice

  template:
    metadata:
      labels:
        app: microservice

    spec:
      containers:
      - name: microservice-container
        image: nesa24/myrepo:latest
        ports:
        - containerPort: 5000
