kubernetes-microservices/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: microservice-service

spec:
  selector:
    app: microservice

  ports:
  - protocol: TCP
    port: 80
    targetPort: 80

  type: ClusterIP
